Fix container overflow bug when popping out axis

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,10 @@ body {
   margin-top: 60px;
   padding-top: 2px;
   height: calc(100vh - 62px);
+  &.grabbing {
+    margin-top: 0;
+    padding-top: 62px;
+  }
 }
 
 .grabbing {
